# router-dyndns

./: .env.example  .gitignore  Caddyfile.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
router_dyndns/: __init__.py  cli.py  ddns.py  ddns_api.py  ddns_dns.py  ddns_models.py  ddns_security.py  ddns_service.py  ddns_store.py
tests/: test_ddns.py
